feat(service): Add traffic statistics api
